--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:12.0.0'
     compile 'com.kelvinapps:rxfirebase:0.0.15'
     compile 'com.android.support:design:26.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 
