--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.kelvinapps:rxfirebase:0.0.15'
     compile 'com.android.support:design:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.florent37:tutoshowcase:1.0.1'
 }
 
 
